# sparrow

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.arch  LICENSE  Macros.cmake  README.md  conanfile.txt
src/Feather/: CMakeLists.txt  CtApiFunctions.cpp  CtApiFunctions.h  Feather.cpp  Feather.h  FeatherNodeCommonsCpp.h  FeatherNodeCommonsH.h  FeatherTypes.cpp  FeatherTypes.h  StdInc.h
src/Feather/Api/: Feather.h  FeatherNodes.h
src/Feather/Frontend/: FSimpleSourceCode.cpp  FSimpleSourceCode.h
src/Feather/Nodes/: BackendCode.cpp  BackendCode.h  ChangeMode.cpp  ChangeMode.h  DynNode.cpp  DynNode.h  DynNodeVector.h  FeatherNodeKinds.h  FeatherNodes.cpp  FeatherNodes.h  GlobalConstructAction.cpp  GlobalConstructAction.h  GlobalDestructAction.cpp  GlobalDestructAction.h  LocalSpace.cpp  LocalSpace.h  NodeList.cpp  NodeList.h  Nop.cpp  Nop.h  Properties.cpp  Properties.h  ScopeDestructAction.cpp  ScopeDestructAction.h  TempDestructAction.cpp  TempDestructAction.h  TypeNode.cpp  TypeNode.h
src/Feather/Type/: ArrayType.cpp  ArrayType.h  DataType.cpp  DataType.h  FunctionType.cpp  FunctionType.h  LValueType.cpp  LValueType.h  StorageType.cpp  StorageType.h  Void.cpp  Void.h
src/Feather/Util/: Context.cpp  Context.h  Ct.cpp  Ct.h  Decl.cpp  Decl.h  StringData.h  TypeTraits.cpp  TypeTraits.h
src/Feather/Utils/: Ct.h  FeatherNodeKinds.h  FeatherTypeKinds.h  FeatherUtils.h  FeatherUtils.hpp  NodeUtils.h  StringData.h  TypeTraits.h
src/Feather/src/: AtomicOrdering.h  CtApiFunctions.cpp  CtApiFunctions.h  FeatherNodeCommonsCpp.h  FeatherNodeCommonsH.h  StdInc.h
src/LLVMBackend/: CMakeLists.txt  CtModule.cpp  CtModule.h  DataLayoutHelper.cpp  DataLayoutHelper.h  Generator.cpp  Generator.h  LLVMBackend.cpp  LLVMBackend.h  LLVMBackendMod.cpp  LLVMBackendMod.h  LLVMSourceCode.cpp  LLVMSourceCode.h  Module.cpp  Module.h  RtModule.cpp  RtModule.h  StdInc.h
src/LLVMBackend/Tr/: DebugInfo.cpp  DebugInfo.h  GlobalContext.h  Instruction.cpp  Instruction.h  LlvmBuilder.h  PrepareTranslate.cpp  PrepareTranslate.h  Scope.cpp  Scope.h  TrContext.cpp  TrContext.h  TrFunction.cpp  TrFunction.h  TrLocal.cpp  TrLocal.h  TrTopLevel.cpp  TrTopLevel.h  TrType.cpp  TrType.h
src/Nest/: CMakeLists.txt  Compiler.cpp  Compiler.h  CompilerImpl.cpp  CompilerImpl.h  CompilerInstance.cpp  CompilerInstance.h  CompilerModule.h  CompilerSettings.h  DefaultStdInc.h  DefaultStdInc.hpp  Nest.cpp  Nest.h  StdInc.cpp  StdInc.h  StdInc.hpp
src/Nest/Api/: Backend.cpp  Backend.h  CompilationContext.cpp  CompilationContext.h  Compiler.cpp  Compiler.h  CompilerModule.h  EvalMode.h  Location.h  Modifier.h  Nest.cpp  Nest.h  Node.cpp  Node.h  NodeArray.c  NodeArray.h  NodeKindRegistrar.cpp  NodeKindRegistrar.h  NodeProperties.c  NodeProperties.h  NodeRange.h  SourceCode.cpp  SourceCode.h  SourceCodeKindRegistrar.cpp  SourceCodeKindRegistrar.h  StringRef.h  SymTab.cpp  SymTab.h  Type.cpp  Type.h  TypeKindRegistrar.cpp  TypeKindRegistrar.h  TypeRef.h
src/Nest/Backend/: Backend.cpp  Backend.h  BackendFactory.h  BackendFactoryImpl.cpp  BackendFactoryImpl.h
src/Nest/Common/: Alloc.c  Alloc.cpp  Alloc.h  Assert.h  CompilationError.cpp  CompilationError.h  ConsoleColors.hpp  Diagnostic.cpp  Diagnostic.h  Diagnostic.hpp  DiagnosticFormatter.cpp  DiagnosticFormatter.h  DiagnosticReporter.cpp  DiagnosticReporter.h  DiagnosticSeverity.h  Fwd.hpp  NodeAllocator.h  NodeAllocatorImpl.cpp  NodeAllocatorImpl.h  PtrArray.h  SaveValue.h  ScopeGuard.cpp  ScopeGuard.hpp  Serialization.cpp  Serialization.h  StringRef.cpp  StringRef.h  StringRef.hpp  TimingSystem.cpp  TimingSystem.h  Tuple.hpp
src/Nest/Frontend/: FrontendFactory.h  FrontendFactoryImpl.cpp  FrontendFactoryImpl.h  Location.c  Location.cpp  Location.h  LocationSer.cpp  LocationSer.h  SourceCode.cpp  SourceCode.h  SourceCodeKindRegistrar.cpp  SourceCodeKindRegistrar.h
src/Nest/Utils/: Alloc.h  Assert.h  CompilerSettings.hpp  CompilerStats.hpp  ConsoleColors.hpp  DefaultStdInc.hpp  Diagnostic.cpp  Diagnostic.h  Diagnostic.hpp  DiagnosticFormatter.cpp  DiagnosticFormatter.hpp  Fwd.hpp  LocationUtils.h  NodeUtils.h  NodeUtils.hpp  NodeVector.hpp  PrintTimer.hpp  Profiling.h  ProfilingFwd.h  PtrArray.c  PtrArray.h  PtrRange.h  Reverse.hpp  StringRef.cpp  StringRef.hpp  Tuple.hpp
src/Nest/src/: StdInc.hpp
src/SparrowCompiler/: AstDump.cpp  AstDump.h  CMakeLists.txt  Settings.cpp  Settings.h  SparrowCompiler.cpp  StdInc.h  VersionInfo.h.in
src/SparrowFrontend/: CMakeLists.txt  CtApiFunctions.cpp  CtApiFunctions.h  IntMods.cpp  IntMods.h  Mods.cpp  Mods.h  NodeCommonsCpp.h  NodeCommonsH.h  SparrowFrontend.cpp  SparrowFrontend.h  SparrowFrontendTypes.cpp  SparrowFrontendTypes.h  SparrowFrontendTypes.hpp  SparrowSourceCode.cpp  SparrowSourceCode.h  SprDebug.cpp  SprDebug.h  StdInc.h  UserDefinedSourceCode.cpp  UserDefinedSourceCode.h
src/SparrowFrontend/Grammar/: Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  bufferedCharSource.spr  ext.spr  fileCharSource.spr  layoutDecoder.spr  location.spr  node.spr  parser.spr  parser.yy  parserDefs.spr  parserIf.ll  parserIf.spr  parserTest.spr  rangeWithLookahead.spr  scanner.ll  scanner.spr  scannerIf.ll  scannerIf.spr  scannerTest.spr  stringCharSource.spr  token.spr  untypedPtr.spr
src/SparrowFrontend/Helpers/: CommonCode.cpp  CommonCode.h  Convert.cpp  Convert.h  Ct.cpp  Ct.h  DeclsHelpers.cpp  DeclsHelpers.h  ForEachNodeInNodeList.h  Generics.cpp  Generics.h  Overload.cpp  Overload.h  QualifiedId.cpp  QualifiedId.h  SprTypeTraits.h  (+3 more)
unittests/: CMakeLists.txt  DetailConsoleReporter.cpp  StdInc.h  TestBasic.cpp  TestConvert.cpp
unittests/Common/: BackendMock.cpp  BackendMock.hpp  FeatherNodeFactory.cpp  FeatherNodeFactory.hpp  GeneralFixture.cpp  GeneralFixture.hpp  LocationGen.hpp  RcBasic.hpp  TypeFactory.cpp  TypeFactory.hpp
unittests/Feather/: TestFeatherNodes.cpp  TestTypes.cpp
unittests/Nest/: MockNode.cpp  MockNode.hpp  MockType.cpp  MockType.hpp  TestNode.cpp  TestType.cpp
unittests/SparrowFrontend/: TestCallable.cpp  TestConvert.cpp  TestDecls.cpp  TestGenerics.cpp
(+849 files in other folders)
